--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -18,9 +18,9 @@
     <string name="ui_auth_activity_title">SmartCampus</string>
     
     <string name="token_required">Please login before proceeding with the SmartCampus application.</string>
-    <string name="auth_failed">Application initialization failed.</string>
+    <string name="auth_failed">Inizializzazione dell'app è fallita.</string>
     
-    <string name="token_expired">SmartCampus login expired.</string>
-    <string name="auth_in_progress">Authentication in progress...</string>
+    <string name="token_expired">SmartCampus login scaduto.</string>
+    <string name="auth_in_progress">Autenticazione in corso...</string>
   
 </resources>
