--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
 <resources>
     <string name="ui_auth_activity_title">SmartCampus</string>
     
-    <string name="token_required">Please login before proceeding with the SmartCampus application.</string>
+    <string name="token_required">Please login before proceeding with the application.</string>
     <string name="auth_failed">Application initialization failed.</string>
     
     <string name="token_expired">SmartCampus login expired.</string>
