--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="token_required">Please login before proceeding with the application.</string>
     <string name="auth_failed">Application initialization failed.</string>
     
-    <string name="token_expired">SmartCampus login expired.</string>
+    <string name="token_expired">App login expired.</string>
     <string name="auth_in_progress">Authentication in progress...</string>
     <string name="auth_question">Would you like to authenticate yourself?</string>
 </resources>
