--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -18,9 +18,11 @@
     <string name="ui_auth_activity_title">SmartCampus</string>
     
     <string name="token_required">E\' necessario effettuare il login prima di utilizzare l\'applicazione.</string>
-    <string name="auth_failed">Inizializzazione dell\'app fallita.</string>
-    
+    <string name="auth_failed">Errore nell\'inizializzazione dell\'app. Riprova a breve.</string>   
     <string name="token_expired">La sessione dell\'app è scaduta.</string>
-    <string name="auth_in_progress">Autenticazione in corso...</string>
-    <string name="auth_question">Desideri autenticarti?</string>
+    
+    <string name="auth_in_progress">Connessione in corso &#8230;</string>
+    <string name="auth_question_upgrade">Registrati con il tuo account Google e potrai accedere a tutte le funzionalitá offerte dall\'app</string>
+    <string name="not_now">Non adesso</string>
+    
 </resources>
