--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,9 +18,11 @@
     <string name="ui_auth_activity_title">SmartCampus</string>
    
     <string name="token_required">Please login before proceeding with the application.</string>
-    <string name="auth_failed">Application initialization failed.</string>
+    <string name="auth_failed">Application initialization failed. Try connecting again.</string>
     
     <string name="token_expired">App login expired.</string>
-    <string name="auth_in_progress">Authentication in progress...</string>
-    <string name="auth_question">Would you like to authenticate yourself?</string>
+    <string name="auth_in_progress">Authentication in progress &#8230;</string>
+    <string name="auth_question_upgrade">Authenticate yourself with your Google account to exploit all offered functionalities</string>
+    <string name="not_now">Not now</string>
+    
 </resources>
