--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="auth_failed">Application initialization failed. Try connecting again.</string>
     
     <string name="token_expired">App login expired.</string>
-    <string name="auth_in_progress">Authentication in progress &#8230;</string>
+    <string name="auth_in_progress">Initializing the app &#8230;</string>
     <string name="auth_question_upgrade">Authenticate yourself with your Google account to exploit all offered functionalities</string>
     <string name="not_now">Not now</string>
     
